--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -16,6 +16,7 @@
                 <li><a href="{% url 'home' %}" class="menu-btn">Home</a></li>
                 <li><a href="{% url 'articles:create' %}" class="highlight">About</a></li>
                 <li><a href="{% url 'accounts:login' %}">Login</a></li>
+                <li><a href="{% url 'accounts:login' %}">dadada</a></li>
                     <!--                 <li><a href="{% url 'home' %}" class="menu-btn">Home</a></li>
                 <li><a href="{% url 'articles:create' %}" class="highlight">About</a></li>
                 <li><a href="{% url 'attendance_page' %}" class="highlight">Attendance</a></li>
